<resources>
    <string name="app_name">Parrot</string>
    <string name="hint_email">Email</string>
    <string name="hint_nome">Nome completo</string>
    <string name="hint_username">Username</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_confirmar_senha">Confirmar senha</string>
    <string name="hint_login">Login</string>
    <string name="hint_error">Todos os campos devem estar preenchidos</string>
    <string name="label_sign_up">Ainda não tem conta?</string>
    <string name="hint_new_post">O que você está sentindo?</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Buscar</string>
    <string name="nav_notification">Notificações</string>
    <string name="nav_profile">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
