<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionHome"
        android:enabled="true"
        android:icon="@drawable/ic_like"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/actionSearch"
        android:enabled="true"
        android:icon="@drawable/ic_like"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/actionNotifications"
        android:enabled="true"
        android:icon="@drawable/ic_like"
        android:title="@string/nav_notification" />

    <item
        android:id="@+id/actionProfile"
        android:enabled="true"
        android:icon="@drawable/ic_like"
        android:title="@string/nav_profile" />

</menu>