<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Vinculando ViewModel com a view -->
    <data>
        
        <variable
            name="viewModel"
            type="com.albuquerque.parrot.app.auth.viewmodel.AuthViewModel" />
        
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_logo"
            android:tint="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/layoutEmail"
            app:layout_constraintEnd_toEndOf="@+id/logo"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hint_email"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/layoutSenha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.user.email}"
                android:textColor="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutSenha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hint_senha"
            passwordValidator="@{viewModel.user.senha}"
            msgError="@string/hint_senha"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutEmail"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.user.senha}"
                android:textColor="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/hint_login"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/separator"
            app:layout_constraintEnd_toEndOf="@+id/layoutSenha"
            app:layout_constraintStart_toStartOf="@+id/layoutSenha"
            app:layout_constraintTop_toBottomOf="@+id/layoutSenha" />

        <View
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="#707070"
            app:layout_constraintBottom_toTopOf="@+id/signUp"
            app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
            app:layout_constraintStart_toStartOf="@+id/buttonLogin"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_sign_up"
            android:textColor="#5D5D5D"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/separator"
            app:layout_constraintStart_toStartOf="@+id/separator"
            app:layout_constraintTop_toBottomOf="@+id/separator" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>